Refactor: resetea form y pasa datos al servicio

--- a/src/app/modules/admin/containers/am-user/am-user.component.html
+++ b/src/app/modules/admin/containers/am-user/am-user.component.html
@@ -9,7 +9,7 @@
         </section>
         <section class="container-select">
             <label for="">Centro</label>
-            <select name="" id="" [(ngModel)]="centroAsignado">
+            <select name="" id="" >
                 <option value="">Selecciona un centro</option>
                 <option value="">1</option>
                 <option value="">2</option>
