--- a/src/app/modules/admin/containers/axes/axes.component.html
+++ b/src/app/modules/admin/containers/axes/axes.component.html
@@ -55,7 +55,7 @@
         <ng-container matColumnDef="acciones">
           <th class="list-axes__header" *matHeaderCellDef>Acciones</th>
           <td class="list-axes__acction-cell" *matCellDef="let element">
-            <a href="{{ element.acciones.edit }}">
+            <a href="{{ element.id }}">
               <img
                 class="list-axes__ico-action"
                 src="../../../../../assets/icons/Pencil.svg"
