--- a/src/app/modules/admin/containers/users/users.component.html
+++ b/src/app/modules/admin/containers/users/users.component.html
@@ -3,17 +3,16 @@
         <h1>Director de centro</h1>
     </div>
     <div class="container-search-botton">
-        <div>
-            <button mat-button class="button-createUser" style="color: white;" (click)="create()"> <svg
-                    xmlns="http://www.w3.org/2000/svg" width="18" height="19.09" fill="currentColor"
-                    class="bi bi-person-plus-fill" viewBox="0 0 16 16">
-                    <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
-                    <path fill-rule="evenodd"
-                        d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z" />
-                </svg>
-                Agregar usuario
-            </button>
-        </div>
+            <button class="button-createUser" style="color: white; font-family: Roboto Md 500;" (click)="create()"> <svg
+                xmlns="http://www.w3.org/2000/svg" width="18" height="19.09" fill="currentColor"
+                style="margin-left:10px ; margin-right: 10px;"
+                class="bi bi-person-plus-fill" viewBox="0 0 16 16">
+                <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
+                <path fill-rule="evenodd"
+                    d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z" />
+            </svg>
+            Agregar usuario
+        </button>
         <div>
             <input class="input-search" type="text"  (ngModelChange)="busca($event)"
             [(ngModel)]="usuario">
