--- a/src/app/modules/admin/containers/am-user/am-user.component.html
+++ b/src/app/modules/admin/containers/am-user/am-user.component.html
@@ -9,14 +9,12 @@
         </section>
         <section class="container-select">
             <label for="">Centro</label>
-            <select name="" id="" >
-                <option value="">Selecciona un centro</option>
-                <option value="">1</option>
-                <option value="">2</option>
-                <option value="">3</option>
-                <option value="">{{centroAsignado}}</option>
-                
-            </select>
+            <mat-select name="" id="">
+                <mat-option value="">1</mat-option>
+                <mat-option value="">2</mat-option>
+                <mat-option value="">3</mat-option>
+                <mat-option value="">{{centroAsignado}}</mat-option>
+            </mat-select>
         </section>
         <section class="container-user">
             <label for="">Usuario (direccion de email)*</label>
