--- a/src/app/modules/admin/containers/users/users.component.html
+++ b/src/app/modules/admin/containers/users/users.component.html
@@ -36,9 +36,9 @@
                     </tr>
                 </thead>
             </mat-card>
-            <mat-card *ngFor="let i of dataSource" class="mat-card-user-data">
+            <mat-card *ngFor="let i of user" class="mat-card-user-data">
                 <td>{{i.nombre}}</td>
-                <td>{{i.centroAsignado}}</td>
+                <td>{{centroAsignado(i)}}</td>
                 <td style="text-align: end;">
                     <a class="icon-edit" matTooltip="Editar" (click)="edit(i)">
                         <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="currentColor"
