--- a/src/app/modules/admin/containers/axes/axes.component.scss
+++ b/src/app/modules/admin/containers/axes/axes.component.scss
@@ -73,46 +73,53 @@
       max-width: 71.0625em;
       .list-axes__table {
         margin-top: 22px;
-        width: 100%;
+        max-width: 100%;
         border-collapse: separate;
         border-spacing: 0px 8px;
-        ::ng-deep tr {
+        .list-axes__row {
           box-shadow: 0 2px 2px #00000040;
           height: 48px;
           margin-bottom: 8px;
-        }
-        .list-axes__header {
-          text-align: start;
-          font-family: "Inter-700";
-          font-size: 1em;
-          line-height: 1.1875em;
-          color: #000000;
-        }
-        .list-axes__header:first-of-type {
           padding-left: 1.5em;
-        }
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          .list-axes__header {
+            text-align: start;
+            font-family: "Inter-700";
+            font-size: 1em;
+            line-height: 1.1875em;
+            color: #000000;
+            &:first-of-type {
+              padding-left: 1.5em;
+            }
+          }
+          .list-axes__header--action {
+            width: 153px;
+          }
 
-        .list-axes__row {
-          td {
+          .list-axes__cell--acction {
+            width: 153px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            .list-axes__ico-action {
+              padding: 0.625em 0.625em 0.625em 0;
+              margin-right: 1.0625em;
+              cursor: pointer;
+            }
+            .list-axes__ico-action--edit {
+              margin-top: 4px;
+            }
+          }
+          .list-axes__cell {
             font-family: "Inter" !important;
             font-size: 1em;
             line-height: 1.1875em;
             color: #000000;
-          }
-          td:first-of-type {
-            padding-left: 1.5em;
-          }
-        }
-        .list-axes__axe-cell {
-          width: 18.125em;
-        }
-
-        .list-axes__acction-cell {
-          width: 9.5625em;
-          .list-axes__ico-action {
-            padding: 0.625em 0.625em 0.625em 0;
-            margin-right: 1.0625em;
-            cursor: pointer;
+            &:first-of-type {
+              padding-left: 1.5em;
+            }
           }
         }
       }
@@ -160,7 +167,6 @@
 @media (max-width: 1400px) {
   .container-axes {
     justify-content: flex-start;
-    max-width: none;
     .axes {
       margin-right: 4.375em;
       margin-left: 15.625em;
