Feact: agrega metodo logout al boton cerrar sesion

--- a/src/app/core/layouts/components/navbar/navbar.component.html
+++ b/src/app/core/layouts/components/navbar/navbar.component.html
@@ -180,7 +180,7 @@
       </a>
     </li>
     <li class="navbar__item">
-      <a routerLink="" class="navbar__link">
+      <a routerLink="" class="navbar__link" (click)="logout()">
         <svg
           class="navbar__ico-list"
           alt="Icono de cerrar sesión"
