--- a/src/app/core/layouts/components/header-general/header-general.component.scss
+++ b/src/app/core/layouts/components/header-general/header-general.component.scss
@@ -6,6 +6,7 @@
   left: 0;
   z-index: 1000;
   font-size: 16px;
+
   .header {
     width: 100%;
     height: 8.75em;
@@ -14,6 +15,7 @@
     align-items: center;
     background-color: $color-white;
     border-bottom: 0.1875em solid $color-bg-light-grey;
+    padding-left: 123px;
     .header__logo {
       width: 16.25em;
       padding: 0.5625em 0;
@@ -66,6 +68,7 @@
     font-size: 10px;
     .header {
       justify-content: space-between;
+      padding-left: 0;
       .header__logo {
         margin-left: 2.25rem;
       }
