Refactor: elimina guard en login
para que funcione logout hasta que se solucione problema en logout

--- a/src/app/core/layouts/components/navbar/navbar.component.scss
+++ b/src/app/core/layouts/components/navbar/navbar.component.scss
@@ -9,6 +9,7 @@
   .navbar__list {
     .navbar__item {
       margin: 0.625em 0;
+      cursor: pointer;
       &:hover {
         .navbar__link {
           background: $color-bg-hover-primary;
