--- a/src/app/modules/admin/containers/centers/centers.component.scss
+++ b/src/app/modules/admin/containers/centers/centers.component.scss
@@ -75,8 +75,9 @@ h1 {
 
 table {
     margin-top: 32px;
+    margin-left: 338px;
     height: 440px !important;
-    width: 770px !important;
+    width: 1137px;
 }
 
 
@@ -107,7 +108,7 @@ td {
 
 .mat-card {
     height: 48px !important;
-    width: 770px;
+    width: 1050px;
     border-radius: 0px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 }
@@ -176,9 +177,54 @@ a {
 
 
 @media (max-width: 1400px) {
-    .home {
-        font-size: 12px;
+    .container {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
     }
+
+    table {
+        display: flex;
+        justify-content: space-evenly;
+        width: 100%;
+        margin-left: 150px;
+    }
+
+    .mat-card {
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+
+    }
+
+}
+@media (max-width: 1320px) {
+    .container {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    table {
+        display: flex;
+        
+        justify-content: center;
+        width: 100%;
+        margin-left: 250px;
+    }
+
+    .mat-card {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+
+    }
+    .container-search-botton{
+        margin-left: 200px;
+    }
+
 }
 
 @media (max-width: 768px) {
