Feat: Crea nuevo modal
a pedido del equipo ux se realiza un nuevo modal de alerta de eje creado

--- a/src/app/modules/admin/containers/axes/axes.component.html
+++ b/src/app/modules/admin/containers/axes/axes.component.html
@@ -65,4 +65,22 @@
       </div>
     </section>
   </div>
+  <div *ngIf="flagNew" class="modal">
+    <img
+      class="modal__btnClose"
+      (click)="close()"
+      src="../../../../../assets/icons/X.svg"
+      alt="icono de cerrar"
+    />
+    <div class="modal__container">
+      <img
+        class="modal__ico"
+        src="../../../../../assets/icons/Check.svg"
+        alt="icon check"
+      />
+      <p class="modal__text">
+        ¡El Eje {{ newOrEditedAxe.nombre }}"Eje 5" fue creado con éxito!
+      </p>
+    </div>
+  </div>
 </section>
