--- a/src/app/modules/admin/containers/add-mod-center/add-mod-center.component.scss
+++ b/src/app/modules/admin/containers/add-mod-center/add-mod-center.component.scss
@@ -24,7 +24,7 @@ form {
     background: #FFFFFF;
 }
 
-section{
+section {
     width: 549px;
     height: 83px;
     margin-bottom: 12px;
@@ -70,9 +70,19 @@ input {
     top: 104px;
     border-radius: 35px;
     background: #92CDEF !important;
-    font-family: 'Futura Bk BT'!important;
+    font-family: 'Futura Bk BT' !important;
     font-style: normal !important;
     font-weight: 600 !important;
     font-size: 16px !important;
     line-height: 24px !important;
+}
+
+.labelDato {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.4px;
+    color: rgba(0, 0, 0, 0.6);
 }
