--- a/src/app/modules/admin/containers/axes/axes.component.html
+++ b/src/app/modules/admin/containers/axes/axes.component.html
@@ -101,57 +101,23 @@
       </p>
     </div>
   </div>
-  <div *ngIf="flagDelete" class="modal">
-    <img
-      class="modal__btnClose"
-      (click)="close()"
-      src="../../../../../assets/icons/X.svg"
-      alt="icono de cerrar"
-    />
+  <div *ngIf="flagDelete" class="modal-delete">
     <div class="modal__container-delete">
+      <img
+        class="modal__ico-info"
+        src="../../../../../assets/icons/Info-circle.svg"
+        alt="Icono de información"
+      />
       <p class="modal__text">
-        <span class="modal__text-span">¿</span>Eliminar eje<span
-          class="modal__text-span"
-          >?</span
-        >
+        ¡Estas a punto de eliminar este dato!<br />Esta acción no podrá ser
+        revertida
       </p>
-      <div class="modal__options">
-        <svg
-          class="modal__ico-option"
-          (click)="deleteAxe(idToDelete)"
-          alt="icon check"
-          viewBox="0 0 94 120"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M80.9981 27.6532L80.9988 27.6542C81.2333 27.9527 81.4238 28.3134 81.5552 28.7177C81.6866 29.1219 81.7551 29.558 81.7551 30.0004C81.7551 30.4427 81.6866 30.8788 81.5552 31.283C81.4238 31.6874 81.2333 32.048 80.9988 32.3465L80.9984 32.347L39.8734 84.847L39.8731 84.8475C39.6392 85.1468 39.368 85.3758 39.0791 85.5289C38.791 85.6815 38.4884 85.7571 38.1873 85.7571C37.8862 85.7571 37.5837 85.6815 37.2955 85.5289C37.0066 85.3758 36.7354 85.1468 36.5015 84.8475L36.5012 84.847L15.9387 58.597C15.4638 57.9909 15.1836 57.1478 15.1836 56.2504C15.1836 55.3529 15.4638 54.5098 15.9387 53.9037C16.4112 53.3005 17.0223 52.9956 17.6248 52.9956C18.2274 52.9956 18.8384 53.3005 19.3109 53.9037L37.7936 77.5061L38.1873 78.0088L38.5809 77.5062L77.6262 27.6537L77.6265 27.6532C77.8604 27.3539 78.1316 27.1249 78.4205 26.9718L78.1865 26.53L78.4205 26.9718C78.7087 26.8192 79.0112 26.7437 79.3123 26.7437C79.6134 26.7437 79.9159 26.8192 80.2041 26.9718C80.493 27.1249 80.7642 27.3539 80.9981 27.6532Z"
-            fill="#22502B"
-            stroke="#22502B"
-          />
-        </svg>
-        <svg
-          class="modal__ico-option"
-          (click)="close()"
-          alt="icon check"
-          viewBox="0 0 24 31"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            fill-rule="evenodd"
-            clip-rule="evenodd"
-            d="M17.781 8.0329C17.8508 8.12289 17.9062 8.22979 17.944 8.34748C17.9818 8.46518 18.0013 8.59135 18.0013 8.71877C18.0013 8.8462 17.9818 8.97237 17.944 9.09006C17.9062 9.20776 17.8508 9.31466 17.781 9.40465L7.28097 22.9671C7.14014 23.1491 6.94913 23.2512 6.74997 23.2512C6.55081 23.2512 6.3598 23.1491 6.21897 22.9671C6.07814 22.7852 5.99902 22.5385 5.99902 22.2813C5.99902 22.024 6.07814 21.7773 6.21897 21.5954L16.719 8.0329C16.7886 7.94268 16.8714 7.8711 16.9625 7.82227C17.0536 7.77343 17.1513 7.74829 17.25 7.74829C17.3486 7.74829 17.4463 7.77343 17.5374 7.82227C17.6285 7.8711 17.7113 7.94268 17.781 8.0329V8.0329Z"
-            fill="#22502B"
-          />
-          <path
-            fill-rule="evenodd"
-            clip-rule="evenodd"
-            d="M6.21936 8.0329C6.14952 8.12289 6.0941 8.22979 6.0563 8.34748C6.01849 8.46518 5.99902 8.59135 5.99902 8.71877C5.99902 8.8462 6.01849 8.97237 6.0563 9.09006C6.0941 9.20776 6.14952 9.31466 6.21936 9.40465L16.7194 22.9671C16.8602 23.1491 17.0512 23.2512 17.2504 23.2512C17.4495 23.2512 17.6405 23.1491 17.7814 22.9671C17.9222 22.7852 18.0013 22.5385 18.0013 22.2813C18.0013 22.024 17.9222 21.7773 17.7814 21.5954L7.28136 8.0329C7.2117 7.94268 7.12893 7.8711 7.03781 7.82227C6.9467 7.77343 6.84902 7.74829 6.75036 7.74829C6.65171 7.74829 6.55403 7.77343 6.46291 7.82227C6.3718 7.8711 6.28903 7.94268 6.21936 8.0329V8.0329Z"
-            fill="#22502B"
-          />
-        </svg>
-      </div>
+    </div>
+    <div class="modal__options">
+      <button class="btn-modal__cancel" (click)="close()">Cancelar</button>
+      <button class="btn-modal__accept" (click)="deleteAxe(idToDelete)">
+        Confirmar y eliminar
+      </button>
     </div>
   </div>
 </section>
