--- a/src/app/modules/admin/containers/axes/axes.component.scss
+++ b/src/app/modules/admin/containers/axes/axes.component.scss
@@ -166,44 +166,69 @@
       margin-left: 15px;
     }
   }
+}
+.modal-delete {
+  position: absolute;
+  top: 134px;
+  z-index: 200;
+  width: 525px;
+  height: 297px;
+  background-color: #cce8f4;
+  border: 1px solid #cce8f4;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  padding-bottom: 21px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   .modal__container-delete {
     width: 474px;
     display: flex;
-    flex-direction: column;
+    margin-top: 58px;
+    .modal__ico-info {
+      width: 88px;
+      height: 90px;
+    }
     .modal__text {
       font-size: 24px;
       text-align: center;
       letter-spacing: 0.25px;
-      color: #154520;
+      color: #083d5e;
       padding-top: 15px;
       margin-bottom: 0;
       margin-left: 15px;
-      .modal__text-span {
-        font-family: Roboto;
+    }
+  }
+  .modal__options {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 44px;
+    padding-right: 17px;
+    .btn-modal__cancel {
+      width: 168px;
+      height: 70px;
+      background: #ffffff;
+      border: 1px solid #083d5e;
+      border-radius: 35px;
+      font-size: 20px;
+      cursor: pointer;
+      &:hover {
+        border: 3px solid #083d5e;
       }
     }
-    .modal__options {
-      width: 100%;
-      display: flex;
-      padding: 0 60px;
-      justify-content: space-around;
-      .modal__ico-option {
-        transition: $transition;
-        padding: 30px;
-        width: 110px;
-        border-radius: 4px;
-        cursor: pointer;
-        path {
-          fill: #22502b;
-          transition: $transition;
-        }
-        &:hover {
-          transform: scale(1.15);
-
-          path {
-            fill: #1e1e1e;
-          }
-        }
+    .btn-modal__accept {
+      width: 168px;
+      height: 70px;
+      color: #e50d0d;
+      background: #ffffff;
+      border: 1px solid #d10e0e;
+      border-radius: 35px;
+      font-size: 20px;
+      cursor: pointer;
+      &:hover {
+        border: 3px solid #d10e0e;
       }
     }
   }
