--- a/src/app/modules/admin/containers/axes/axes.component.scss
+++ b/src/app/modules/admin/containers/axes/axes.component.scss
@@ -141,6 +141,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: auto;
   .modal__btnClose {
     padding: 21px 12px 18px 25px;
     width: 61px;
@@ -237,7 +238,6 @@
   .mat-snack-bar-container {
     display: flex;
     justify-content: center;
-
     width: 525px;
     max-width: 50vw;
     height: 264px;
@@ -268,7 +268,8 @@
 }
 @media (max-width: 1400px) {
   .container-axes {
-    justify-content: flex-start;
+    justify-content: none;
+    left: calc(50vw - 262px);
     .axes {
       margin-right: 4.375em;
       margin-left: 7.9375em;
@@ -277,6 +278,9 @@
         padding-right: 57px; //centra el titulo alineado con el logo del header
       }
     }
+  }
+  .modal-delete {
+    top: 90px;
   }
   ::ng-deep .cdk-overlay-container {
     .mat-snack-bar-container {
